--- a/Shopping Card/index.html
+++ b/Shopping Card/index.html
@@ -16,7 +16,7 @@
       <h2>Clothing Store</h2>
       <div class="cart">
         <i class="bi bi-bag"></i>
-        <div class="cartAmount">0</div>
+        <div id="cartAmount" class="cartAmount">0</div>
       </div>
     </div>
 
