--- a/Shopping Card/cart.html
+++ b/Shopping Card/cart.html
@@ -10,6 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
     <title>Clothing Store</title>
+    <title>Document</title>
   </head>
   <body>
     <div class="navbar">
@@ -23,9 +24,9 @@
         </div>
       </a>
     </div>
-
-    <div class="shop" id="shop"></div>
+    <div class="text-center" id="label"></div>
+    <div class="shopping-cart" id="shopping-cart"></div>
+    <script src="src/data.js"></script>
+    <script src="src/cart.js"></script>
   </body>
-  <script src="src/data.js"></script>
-  <script src="src/main.js"></script>
 </html>
