--- a/Budget app/index.html
+++ b/Budget app/index.html
@@ -1,96 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- bootstrap css -->
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
 
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <meta http-equiv="X-UA-Compatible" content="ie=edge">
- <!-- bootstrap css -->
- <link rel="stylesheet" href="css/bootstrap.min.css">
- <!-- main css -->
- <link rel="stylesheet" href="css/main.css">
- <!-- google fonts -->
- <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+    <!-- main css -->
+    <link rel="stylesheet" href="css/main.css" />
+    <!-- google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Courgette"
+      rel="stylesheet"
+    />
 
- <!-- font awesome -->
- <link rel="stylesheet" href="css/all.css">
- <title>budget app</title>
- <style>
- </style>
-</head>
+    <!-- font awesome -->
 
-<body>
- <div class="container-fluid">
-  <div class="row">
-   <div class="col-11 mx-auto pt-3">
-    <!-- title -->
-    <h3 class="text-uppercase mb-4">budget app</h3>
-    <div class="row">
-     <div class="col-md-5 my-3">
-      <!-- budget feedback -->
-      <div class="budget-feedback alert alert-danger text-capitalize">budget feedback</div>
-      <!-- budget form -->
-      <form id="budget-form" class=" budget-form">
-       <h5 class="text-capitalize">please enter your budget</h5>
-       <div class="form-group">
-        <input type="number" class="form-control budget-input" id="budget-input">
-       </div>
-       <!-- submit button -->
-       <button type="submit" class="btn text-capitalize budget-submit" id="budget-submit">calculate</button>
-      </form>
-     </div>
-     <div class="col-md-7">
-      <!-- app info -->
-      <div class="row my-3">
-       <div class="col-4 text-center mb-2">
-        <h6 class="text-uppercase info-title">budget</h6>
-        <span class="budget-icon"><i class="fas fa-money-bill-alt"></i></span>
-        <h4 class="text-uppercase mt-2 budget" id="budget"><span>$ </span><span id="budget-amount">0</span></h4>
-       </div>
-       <div class="col-4 text-center">
-        <h6 class="text-uppercase info-title">expenses</h6>
-        <span class="expense-icon"><i class="far fa-credit-card"></i></span>
-        <h4 class="text-uppercase mt-2 expense" id="expense"><span>$ </span><span id="expense-amount">0</span></h4>
-       </div>
-       <div class="col-4 text-center">
-        <h6 class="text-uppercase info-title">balance</h6>
-        <span class="balance-icon"><i class="fas fa-dollar-sign"></i></span>
-        <h4 class="text-uppercase mt-2 balance" id="balance"> <span>$ </span><span id="balance-amount">0</span></h4>
-       </div>
-      </div>
-     </div>
-    </div>
+    <title>budget app</title>
+    <style></style>
+  </head>
 
-    <div class="row">
-     <div class="col-md-5 my-3">
-      <!-- expense feedback -->
-      <div class="expense-feedback alert alert-danger text-capitalize">expense feedback</div>
-      <!-- expense form -->
-      <form id="expense-form" class=" expense-form">
-       <h5 class="text-capitalize">please enter your expense</h5>
-       <div class="form-group">
-        <input type="text" class="form-control expense-input" id="expense-input">
-       </div>
-       <h5 class="text-capitalize">please enter expense amount</h5>
-       <div class="form-group">
-        <input type="number" class="form-control expense-input" id="amount-input">
-       </div>
-       <!-- submit button -->
-       <button type="submit" class="btn text-capitalize expense-submit" id="expense-submit">add expense</button>
-      </form>
-     </div>
-     <div class="col-md-7 my-3">
-      <!-- expense list -->
-      <div class="expense-list" id="expense-list">
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-11 mx-auto pt-3">
+          <!-- title -->
+          <h3 class="text-uppercase mb-4">budget app</h3>
+          <div class="row">
+            <div class="col-md-5 my-3">
+              <!-- budget feedback -->
+              <div class="budget-feedback alert alert-danger text-capitalize">
+                budget feedback
+              </div>
+              <!-- budget form -->
+              <form id="budget-form" class="budget-form">
+                <h5 class="text-capitalize">please enter your budget</h5>
+                <div class="form-group">
+                  <input
+                    type="number"
+                    class="form-control budget-input"
+                    id="budget-input"
+                  />
+                </div>
+                <!-- submit button -->
+                <button
+                  type="submit"
+                  class="btn text-capitalize budget-submit"
+                  id="budget-submit"
+                >
+                  calculate
+                </button>
+              </form>
+            </div>
+            <div class="col-md-7">
+              <!-- app info -->
+              <div class="row my-3">
+                <div class="col-4 text-center mb-2">
+                  <h6 class="text-uppercase info-title">budget</h6>
+                  <span class="budget-icon"
+                    ><i class="fas fa-money-bill-alt"></i
+                  ></span>
+                  <h4 class="text-uppercase mt-2 budget" id="budget">
+                    <span>$ </span><span id="budget-amount">0</span>
+                  </h4>
+                </div>
+                <div class="col-4 text-center">
+                  <h6 class="text-uppercase info-title">expenses</h6>
+                  <span class="expense-icon"
+                    ><i class="far fa-credit-card"></i
+                  ></span>
+                  <h4 class="text-uppercase mt-2 expense" id="expense">
+                    <span>$ </span><span id="expense-amount">0</span>
+                  </h4>
+                </div>
+                <div class="col-4 text-center">
+                  <h6 class="text-uppercase info-title">balance</h6>
+                  <span class="balance-icon"
+                    ><i class="fas fa-dollar-sign"></i
+                  ></span>
+                  <h4 class="text-uppercase mt-2 balance" id="balance">
+                    <span>$ </span><span id="balance-amount">0</span>
+                  </h4>
+                </div>
+              </div>
+            </div>
+          </div>
 
-       <div class="expense-list__info d-flex justify-content-between text-capitalize">
-        <h5 class="list-item">expense title</h5>
-        <h5 class="list-item">expense value</h5>
-        <h5 class="list-item"></h5>
-       </div>
-       <!-- single expense -->
+          <div class="row">
+            <div class="col-md-5 my-3">
+              <!-- expense feedback -->
+              <div class="expense-feedback alert alert-danger text-capitalize">
+                expense feedback
+              </div>
+              <!-- expense form -->
+              <form id="expense-form" class="expense-form">
+                <h5 class="text-capitalize">please enter your expense</h5>
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control expense-input"
+                    id="expense-input"
+                  />
+                </div>
+                <h5 class="text-capitalize">please enter expense amount</h5>
+                <div class="form-group">
+                  <input
+                    type="number"
+                    class="form-control expense-input"
+                    id="amount-input"
+                  />
+                </div>
+                <!-- submit button -->
+                <button
+                  type="submit"
+                  class="btn text-capitalize expense-submit"
+                  id="expense-submit"
+                >
+                  add expense
+                </button>
+              </form>
+            </div>
+            <div class="col-md-7 my-3">
+              <!-- expense list -->
+              <div class="expense-list" id="expense-list">
+                <div
+                  class="expense-list__info d-flex justify-content-between text-capitalize"
+                >
+                  <h5 class="list-item">expense title</h5>
+                  <h5 class="list-item">expense value</h5>
+                  <h5 class="list-item"></h5>
+                </div>
+                <!-- single expense -->
 
-       <!-- <div class="expense">
+                <!-- <div class="expense">
         <div class="expense-item d-flex justify-content-between align-items-baseline">
 
          <h6 class="expense-title mb-0 text-uppercase list-item">- title</h6>
@@ -109,28 +158,21 @@
 
        </div> -->
 
-       <!-- end of single expense -->
-
+                <!-- end of single expense -->
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-     </div>
     </div>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
 
-
-
-   </div>
-  </div>
- </div>
-
-
-
-
- <!-- jquery -->
- <script src="js/jquery-3.3.1.min.js"></script>
- <!-- bootstrap js -->
- <script src="js/bootstrap.bundle.min.js"></script>
- <!-- script js -->
- <script src="js/app.js"></script>
-</body>
-
+    <!-- script js -->
+    <script src="js/app.js"></script>
+  </body>
 </html>
