--- a/Budget app/index.html
+++ b/Budget app/index.html
@@ -13,6 +13,11 @@
       crossorigin="anonymous"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
+
     <!-- main css -->
     <link rel="stylesheet" href="css/main.css" />
     <!-- google fonts -->
