TODO app javascript

--- a/Todo app - CRUD/TODO App/index.html
+++ b/Todo app - CRUD/TODO App/index.html
@@ -112,4 +112,5 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
     crossorigin="anonymous"
   ></script>
+  <script src="main.js"></script>
 </html>
