--- a/Typing game/index.html
+++ b/Typing game/index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="typing.js" defer></script>
   </head>
   <body>
     <main>
@@ -33,7 +34,5 @@
         <div id="focus-error">Click here to focus</div>
       </div>
     </main>
-
-    <script src="typing.js"></script>
   </body>
 </html>
