showing word per minute result

--- a/Typing game/index.html
+++ b/Typing game/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <div id="header">
-        <div id="info">30</div>
+        <div id="info"></div>
         <div id="buttons">
           <button>New game</button>
         </div>
