--- a/Memory card game/index.html
+++ b/Memory card game/index.html
@@ -9,51 +9,51 @@
   </head>
   <body>
     <section class="memory-game">
-      <div class="memory-card">
+      <div class="memory-card" data-framework="aurelia">
         <img src="img/aurelia.svg" alt="Aurelia" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="aurelia">
         <img src="img/aurelia.svg" alt="Aurelia" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="angular">
         <img src="img/angular.svg" alt="Angular" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="angular">
         <img src="img/angular.svg" alt="Angular" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="ember">
         <img src="img/ember.svg" alt="Ember" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="ember">
         <img src="img/ember.svg" alt="Ember" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="react">
         <img src="img/react.svg" alt="React" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="react">
         <img src="img/react.svg" alt="React" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="backbone">
         <img src="img/backbone.svg" alt="Backbone" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="backbone">
         <img src="img/backbone.svg" alt="Backbone" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="vue">
         <img src="img/vue.svg" alt="Vue" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="vue">
         <img src="img/vue.svg" alt="Vue" class="front-face" />
         <img src="img/js-badge.svg" alt="JS Badge" class="back-face" />
       </div>
