--- a/Typing game/index.html
+++ b/Typing game/index.html
@@ -5,34 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Hippi Type</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <script src="typing.js" defer></script>
+    <title>Typing Speed Test</title>
   </head>
   <body>
-    <main>
-      <div class="nav">
-        <i class="fa-regular fa-keyboard"></i>
-        <h1>Hippi Type</h1>
-      </div>
-
-      <div id="header">
-        <div id="info"></div>
-        <div id="buttons">
-          <button id="newGameBtn">New game</button>
+    <div class="wrapper">
+      <div class="content-box">
+        <div class="typing-text">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+            voluptatibus laboriosam quisquam, quam voluptatum consequuntur odio
+            quod praesentium accusamus dicta?
+          </p>
+        </div>
+        <div class="content">
+          <ul class="result-details">
+            <li class="time">
+              <p>Time Left:</p>
+              <span><b>60</b>s</span>
+            </li>
+            <li class="mistake">
+              <p>Mistakes:</p>
+              <span>0</span>
+            </li>
+            <li class="wpm">
+              <p>WPM:</p>
+              <span>0</span>
+            </li>
+            <li class="cpm">
+              <p>CPM:</p>
+              <span>0</span>
+            </li>
+          </ul>
+          <button>Try Again</button>
         </div>
       </div>
-      <div id="game" tabindex="0">
-        <div id="words"></div>
-        <div id="cursor"></div>
-        <div id="focus-error">Click here to focus</div>
-      </div>
-    </main>
+    </div>
+    <script src="typing.js"></script>
   </body>
 </html>
