--- a/Typing game/index.html
+++ b/Typing game/index.html
@@ -12,9 +12,19 @@
       <div class="content-box">
         <div class="typing-text">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-            voluptatibus laboriosam quisquam, quam voluptatum consequuntur odio
-            quod praesentium accusamus dicta?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            architecto iure eum ullam sit doloremque a? Iste voluptates
+            aspernatur deleniti dolorum facilis assumenda exercitationem tempora
+            tenetur deserunt explicabo, voluptatum ipsa quia distinctio velit.
+            Tempora vel assumenda corrupti officiis sed omnis incidunt
+            dignissimos perspiciatis fuga voluptas tenetur optio suscipit quia
+            repudiandae atque aut at impedit consequatur voluptatum nisi
+            possimus, provident laboriosam dolore fugit! Praesentium laboriosam
+            laudantium velit debitis eaque. Quia sunt expedita odit eaque
+            impedit odio, inventore amet beatae, numquam facilis repellat
+            suscipit aliquid quae repellendus voluptatem dolorem pariatur nulla
+            quo laborum omnis perferendis accusantium! Velit laudantium aperiam
+            deserunt laborum dignissimos?
           </p>
         </div>
         <div class="content">
