--- a/Typing game/index.html
+++ b/Typing game/index.html
@@ -9,23 +9,10 @@
   </head>
   <body>
     <div class="wrapper">
+      <input type="text" class="input-field" />
       <div class="content-box">
         <div class="typing-text">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-            architecto iure eum ullam sit doloremque a? Iste voluptates
-            aspernatur deleniti dolorum facilis assumenda exercitationem tempora
-            tenetur deserunt explicabo, voluptatum ipsa quia distinctio velit.
-            Tempora vel assumenda corrupti officiis sed omnis incidunt
-            dignissimos perspiciatis fuga voluptas tenetur optio suscipit quia
-            repudiandae atque aut at impedit consequatur voluptatum nisi
-            possimus, provident laboriosam dolore fugit! Praesentium laboriosam
-            laudantium velit debitis eaque. Quia sunt expedita odit eaque
-            impedit odio, inventore amet beatae, numquam facilis repellat
-            suscipit aliquid quae repellendus voluptatem dolorem pariatur nulla
-            quo laborum omnis perferendis accusantium! Velit laudantium aperiam
-            deserunt laborum dignissimos?
-          </p>
+          <p></p>
         </div>
         <div class="content">
           <ul class="result-details">
@@ -50,6 +37,7 @@
         </div>
       </div>
     </div>
-    <script src="typing.js"></script>
+    <script src="js/paragraphs.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
