--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -30,6 +30,14 @@
       </div>
     </section>
 
+    <section id="hero">
+      <h4>Trade-in-offer</h4>
+      <h2>Super value deals</h2>
+      <h1>On all products</h1>
+      <p>Save more with coupons & up to 70% off!</p>
+      <button>Shop Now</button>
+    </section>
+
     <script src="script.js"></script>
     <script
       src="https://kit.fontawesome.com/d30c33ca07.js"
