--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -200,6 +200,12 @@
       </div>
     </section>
 
+    <section id="banner" class=".section-m1">
+      <h4>Repair Service</h4>
+      <h2>Up to <span>70% off</span> - All t-Shirts & Accessories</h2>
+      <button class="normal">Explore More</button>
+    </section>
+
     <script src="script.js"></script>
     <script
       src="https://kit.fontawesome.com/d30c33ca07.js"
