--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -356,6 +356,21 @@
       </div>
     </section>
 
+    <section id="banners3">
+      <div class="banner-box">
+        <h2>SEASONAL SALE</h2>
+        <h3>Winter Collection -50% OFF</h3>
+      </div>
+      <div class="banner-box banner-box2">
+        <h2>NEW FOOTWEAR COLLECTİON</h2>
+        <h3>Spring / Summer 2023</h3>
+      </div>
+      <div class="banner-box banner-box3">
+        <h2>T-SHIRTS</h2>
+        <h3>New Trendy Price</h3>
+      </div>
+    </section>
+
     <script src="script.js"></script>
     <script
       src="https://kit.fontawesome.com/d30c33ca07.js"
