--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -200,7 +200,7 @@
       </div>
     </section>
 
-    <section id="banner" class=".section-m1">
+    <section id="banner" class="section-m1">
       <h4>Repair Service</h4>
       <h2>Up to <span>70% off</span> - All t-Shirts & Accessories</h2>
       <button class="normal">Explore More</button>
@@ -368,6 +368,20 @@
       <div class="banner-box banner-box3">
         <h2>T-SHIRTS</h2>
         <h3>New Trendy Price</h3>
+      </div>
+    </section>
+
+    <section id="newsletter" class="section-p1 section-m1">
+      <div class="newstext">
+        <h4>Sign Up For Newsletters</h4>
+        <p>
+          Get E-mail updates about our latest shop and
+          <span>special offers.</span>
+        </p>
+      </div>
+      <div class="form">
+        <input type="text" placeholder="Your email address" />
+        <button class="normal">Sign Up</button>
       </div>
     </section>
 
