--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -21,12 +21,21 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li>
+          <li id="lg-bag">
             <a href="cart.html"
               ><i class="fa fa-shopping-basket" aria-hidden="true"></i
             ></a>
           </li>
+          <a href="#" id="close"
+            ><i class="fa fa-times" aria-hidden="true"></i
+          ></a>
         </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html"
+          ><i class="fa fa-shopping-basket" aria-hidden="true"></i
+        ></a>
+        <i id="bar" class="fa fa-bars"></i>
       </div>
     </section>
 
